--- a/recipes/sunday-sauce/styles.css
+++ b/recipes/sunday-sauce/styles.css
@@ -1,21 +1,28 @@
+.head,
+.line,
+.text,
 .title {
-    text-align: left;
-
+    text-align: center;
 }
 
 .line {
     color: red;
     font-size: 26px;
-    font-weight: bold;
-    display: block;
-    width: 800px;
+    font-weight: bold;  
 }
 
 .head,
 .title {
-    font-size: 30px;
     font-weight: bold;
     text-decoration: underline;
+}
+
+.head {
+    font-size: 30px;
+}
+
+.title {
+    font-size: 60px;
 }
 
 .text {
@@ -23,4 +30,12 @@
     font-style: italic;
     color: red;
     font-weight: bold;
+    list-style-position: inside;
+}
+
+.image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
