--- a/recipes/sunday-sauce/styles.css
+++ b/recipes/sunday-sauce/styles.css
@@ -2,21 +2,23 @@
 .line,
 .text,
 .title {
-    text-align: center;
+    display: block;
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .head,
 .title {
     font-weight: bold;
     text-decoration: underline;
+    text-align: center;
 }
 
 .line {
     color: red;
     font-size: 26px;
-    font-weight: bold;  
-    margin: auto;
-    width: 900px;
+    font-weight: bold;
 }
 
 .head {
