--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,18 @@
 .red,
 .green,
 .blue {
-    font-size: 28px;
-    text-align: center;
+    font-size: 24px;
 }
 
 .head {
     font-size: 36px;
-    text-align: center;
     text-decoration: underline;
+    display: flex;
+    justify-content: center;
+}
+
+div {
+    display: flex;
+    justify-content: center;
+    justify-content: space-around;
 }
